--- a/HTML-Bio-withCSS.html
+++ b/HTML-Bio-withCSS.html
@@ -9,10 +9,11 @@
 <body>
 	<header>
 		<h1>Student Bio</h1>
+
 	</header>
 
 	<div class="container">
-		
+		<p><a href="contact.html">Contact me</a>
 		<section id="main-bio">
 
 			<h2>Your Name</h2>
